--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,16 @@ jobs:
         php:
           - '8.0'
           - '8.1'
+          - '8.2'
         laravel:
           - 9.*
+          - 10.*
         prefer:
           - 'prefer-lowest'
           - 'prefer-stable'
         include:
           - laravel: '9.*'
+          - laravel: '10.*'
             testbench: '7.*'
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} --${{ matrix.prefer }}
