--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,10 @@ jobs:
           - 'prefer-stable'
         include:
           - laravel: '9.*'
-          - laravel: '10.*'
             testbench: '7.*'
+          - laravel: '10.*'
+            testbench: '8.*'
+
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} --${{ matrix.prefer }}
 
