10.x compatible fork of laravel-exporter-contracts

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "renoki-co/laravel-exporter-contracts": "^2.0",
+        "blackfrog-co/laravel-exporter-contracts": "dev-master",
         "laravel/horizon": "^5.8"
     },
     "autoload": {
